[package]
name = "fido-authenticator"
version = "0.1.1"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/solokeys/fido-authenticator"
documentation = "https://docs.rs/fido-authenticator"
description = "FIDO authenticator Trussed app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#ctap-types = {git = "https://github.com/sandbox-quantum/ctap-types_fork", branch = "pqc_kyber768_dilithium3"}
delog = "0.1.0"
heapless = "0.7"
interchange = "0.2.0"
serde = { version = "1.0", default-features = false }
serde_cbor = { version = "0.11.0", default-features = false }
serde-indexed = "0.1.0"
#trussed = {git = "https://github.com/sandbox-quantum/trussed_fork", branch = "pqc_kyber768_dilithium3"}
pqcrypto-dilithium = { version = "0.5.0", default-features = false }
pqcrypto-kyber = { version = "0.8.1", default-features = false }
cosey = {git = "https://github.com/sandbox-quantum/cosey_fork", branch = "pqc_kyber768_dilithium3"}
cbor-smol = "0.4"
rand = {version = "0.8.4", features = ["small_rng"], default-features = false}
failure-getrandom = { path = "failure-getrandom" }
getrandom = { version = "0.2", features = ["custom"] }

apdu-dispatch = { version = "0.1", optional = true }
ctaphid-dispatch = { version = "0.1", optional = true }
iso7816 = { version = "0.1", optional = true }

# Fido2 PQC
ctap-types = { git = "https://github.com/sandbox-quantum/ctap-types_fork", branch = "nitrokey-pqc-fido2" }
trussed = { git = "https://github.com/sandbox-quantum/trussed_fork", branch = "nitrokey-pqc-fido2" }

[features]
dispatch = ["apdu-dispatch", "ctaphid-dispatch", "iso7816"]
disable-reset-time-window = []
enable-fido-pre = []

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []

[dev-dependencies]
byteorder = "1.5.0"
# quickcheck = "1"
rand = "0.8.4"
#trussed = { version = "0.1", features = ["virt"] }
serde_bytes = { version = "0.11.12", default-features = false }
serde_cbor = { version = "0.11.0", default-features = true }

# Fido2 PQC
trussed = { git = "https://github.com/sandbox-quantum/trussed_fork", branch = "nitrokey-pqc-fido2", features = ["virt"] }

[package.metadata.docs.rs]
features = ["dispatch"]

[patch.crates-io]
#ctap-types = { git = "https://github.com/nitrokey/ctap-types.git", tag = "v0.1.2-nitrokey.4" }
ctaphid-dispatch = { git = "https://github.com/trussed-dev/ctaphid-dispatch.git", rev = "57cb3317878a8593847595319aa03ef17c29ec5b" }
apdu-dispatch = { git = "https://github.com/trussed-dev/apdu-dispatch.git", rev = "915fc237103fcecc29d0f0b73391f19abf6576de" }
#trussed = { git = "https://github.com/trussed-dev/trussed.git", rev = "51e68500d7601d04f884f5e95567d14b9018a6cb" }
serde-indexed = { git = "https://github.com/sosthene-nitrokey/serde-indexed.git", rev = "5005d23cb4ee8622e62188ea0f9466146f851f0d" }

# Fido2 PQC
ctap-types = { git = "https://github.com/sandbox-quantum/ctap-types_fork", branch = "nitrokey-pqc-fido2" }
trussed = { git = "https://github.com/sandbox-quantum/trussed_fork", branch = "nitrokey-pqc-fido2" }

pqcrypto-dilithium = { git = "https://github.com/gcsbt/pqcrypto/", rev = "2c54cc32ecfd304b18ea7355233cc814d3164aab" }
pqcrypto-kyber = { git = "https://github.com/gcsbt/pqcrypto/", rev = "2c54cc32ecfd304b18ea7355233cc814d3164aab" }
